[gd_scene load_steps=9 format=3 uid="uid://y8buv1lbsbcc"]

[ext_resource type="Texture2D" uid="uid://b6rcnpk42djnb" path="res://Assets/CardIcon/pixil-layer-Background Copy (3).png" id="1_rrat6"]
[ext_resource type="Script" uid="uid://bblnxydejet16" path="res://Card/CardUI/card_ui.gd" id="1_wyu6r"]
[ext_resource type="Texture2D" uid="uid://st77i6xrf7gp" path="res://Assets/cardframe/MythicCard.png" id="2_5s8bc"]
[ext_resource type="FontFile" uid="uid://bxcm7p0r1l0ke" path="res://CustomResource/m3x6.ttf" id="3_yd0xe"]
[ext_resource type="Texture2D" uid="uid://3p6ub8dn0ywf" path="res://Assets/CardIcon/Sun.png" id="4_ofnmd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofnmd"]
bg_color = Color(0.6, 0.6, 0.6, 0)
shadow_color = Color(0, 0, 0, 1)
shadow_size = 3

[sub_resource type="Theme" id="Theme_snvj4"]

[sub_resource type="Theme" id="Theme_5s8bc"]
default_font = ExtResource("3_yd0xe")
default_font_size = 10

[node name="CardUI" type="Control"]
z_index = 2
custom_minimum_size = Vector2(40, 55)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 55.0
size_flags_horizontal = 4
script = ExtResource("1_wyu6r")

[node name="Shadow" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 55.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ofnmd")

[node name="CardFrame" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 55.0
mouse_filter = 2
texture = ExtResource("2_5s8bc")

[node name="VBoxContainer" type="VBoxContainer" parent="CardFrame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CardFrame/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(30, 35)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0
alignment = 1

[node name="GridContainer" type="GridContainer" parent="CardFrame/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 2

[node name="GemstoneSlot1" type="TextureRect" parent="CardFrame/VBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme = SubResource("Theme_snvj4")
texture = ExtResource("1_rrat6")
stretch_mode = 5

[node name="Icon" type="TextureRect" parent="CardFrame/VBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("4_ofnmd")

[node name="GemstoneSlot2" type="TextureRect" parent="CardFrame/VBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
mouse_filter = 2
texture = ExtResource("1_rrat6")
stretch_mode = 5

[node name="GemstoneSlot3" type="TextureRect" parent="CardFrame/VBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 2
texture = ExtResource("1_rrat6")
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="CardFrame/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="ValueLabel" type="Label" parent="CardFrame/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_5s8bc")
theme_override_font_sizes/font_size = 16
text = "1"

[node name="MultLabel" type="Label" parent="CardFrame/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_5s8bc")
theme_override_font_sizes/font_size = 16
text = "1"
